# mick-goodrick-almanac-prototype

./: CMakeLists.txt  README.md  resources.qrc
src/: chord.cpp  chord.hpp  chordbuilder.cpp  chordbuilder.hpp  constants.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scale.cpp  scale.hpp
src/enums/: alteration.cpp  alteration.hpp  chromaticpitch.cpp  chromaticpitch.hpp  degree.cpp  degree.hpp  distanceinsemitones.cpp  distanceinsemitones.hpp  enumerations.hpp  functionalsequence.cpp  functionalsequence.hpp  interval.cpp  interval.hpp  naturalnote.cpp  naturalnote.hpp  note.cpp  note.hpp  octave.cpp  octave.hpp
